--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^6.6.0"
+    "express-validator": "^6.14.2",
+    "mongoose": "^6.6.0",
+    "save": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
